; ModuleID = '/home/carl/AnghaBench/linux/drivers/zorro/extr_zorro-driver.c_zorro_register_driver.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/zorro/extr_zorro-driver.c_zorro_register_driver.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.zorro_driver = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32*, i32 }

@zorro_bus_type = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zorro_register_driver(%struct.zorro_driver* %0) #0 {
  %2 = alloca %struct.zorro_driver*, align 8
  store %struct.zorro_driver* %0, %struct.zorro_driver** %2, align 8
  %3 = load %struct.zorro_driver*, %struct.zorro_driver** %2, align 8
  %4 = getelementptr inbounds %struct.zorro_driver, %struct.zorro_driver* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 8
  %6 = load %struct.zorro_driver*, %struct.zorro_driver** %2, align 8
  %7 = getelementptr inbounds %struct.zorro_driver, %struct.zorro_driver* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  store i32 %5, i32* %8, align 8
  %9 = load %struct.zorro_driver*, %struct.zorro_driver** %2, align 8
  %10 = getelementptr inbounds %struct.zorro_driver, %struct.zorro_driver* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  store i32* @zorro_bus_type, i32** %11, align 8
  %12 = load %struct.zorro_driver*, %struct.zorro_driver** %2, align 8
  %13 = getelementptr inbounds %struct.zorro_driver, %struct.zorro_driver* %12, i32 0, i32 0
  %14 = call i32 @driver_register(%struct.TYPE_2__* %13)
  ret i32 %14
}

declare dso_local i32 @driver_register(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
